Updated the layout, added portfolio and contact form

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link href="./css/bootstrap.min.css?ver=1.2.0" rel="stylesheet">
   <link href="./css/aos.css?ver=1.2.0" rel="stylesheet">
   <link href="./css/main.css?ver=1.2.0" rel="stylesheet">
-  
+  <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.3/components/projects/project-1/assets/css/project-1.css">
+  <link rel="stylesheet" href="https://unpkg.com/bs-brain@2.0.3/components/contacts/contact-1/assets/css/contact-1.css">
 </head>
 <body>
   <header class="bg-light">
@@ -22,8 +23,8 @@
             <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
             <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-            <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+            <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
           </ul>
         </div>
@@ -32,25 +33,25 @@
   </header>
 
   <div class="cover bg-light">
-    <div class="container px-3">
+    <div class="container px-3 wave-decorator">
       <div class="row">
-        <div class="col-lg-6 p-2"><img class="img-fluid" width="350px" src="images/Jabulane.png" alt="Jabulane"/></div>
+        <div class="col-lg-6 p-2"><img class="img-fluid img-fade-in" width="350px" src="images/Jabulane.png" alt="Jabulane"/></div>
         <div class="col-lg-6">
           <div class="mt-5 ">
-            <p class="lead text-uppercase mb-1">Welcome!</p>
-            <h1 class="decoration" >I’m Jabulane Hlatshwayo</h1>
-            <p class="lead fw-normal mt-3" >Junior Software Engineer</p>
-            <p> I'm a passionate developer with a strong educational background in Information Technology.</p>
-            <div class="social-nav" >
+            <p class="lead text-uppercase slide-from-top">Welcome!</p>
+            <h1 class=" display-5 slide-from-top">I’m Jabulane Hlatshwayo</h1>
+            <p class="lead fw-normal mt-1 slide-from-right" >Junior Software Engineer</p>
+            <p class="slide-from-right"> I'm a passionate developer with a strong educational background in Information Technology.</p>
+            <div class="social-nav">
               <nav role="navigation">
-                <ul class="nav justify-content-left">
-                  <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/in/jabulane-hlatshwayo-019322137/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
+                <ul class="nav justify-content-left slide-from-bottom">
+                  <li class="nav-item slide-from-bottom"><a class="nav-link slide-from-bottom" href="https://www.linkedin.com/in/jabulane-hlatshwayo-019322137/" title="LinkedIn"><i class="fab fa-linkedin"></i><span class="menu-title sr-only">LinkedIn</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://github.com/skhumbuzojabulane" title="GitHub"><i class="fab fa-github"></i><span class="menu-title sr-only">GitHub</span></a></li>
                   <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/" title="Instagram"><i class="fab fa-instagram"></i><span class="menu-title sr-only">Instagram</span></a></li>
                 </ul>
               </nav>
             </div>
-            <div style="margin-top: 20px;"><a class="button-89" href="#contact">Connect With Me</a></div>
+            <div style="margin-top: 20px;margin-bottom: 12px;" class="slide-from-bottom"><a class="button-89" href="#contact">Connect With Me</a></div>
           </div>
         </div>
       </div>
@@ -62,50 +63,36 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <h2 class="h4 my-2">Hey there! I'm Jabulane Hlatshwayo.</h2>
-            <p>I'm an enthusiastic and dedicated junior software engineer. 
+            <h2 class="h4 display-6 slide-from-top">Hey there! I'm Jabulane Hlatshwayo.</h2>
+            <p class="slide-from-top">I'm an enthusiastic and dedicated junior software engineer. 
               I have honed my skills in developing innovative solutions and solving complex problems.
-              I thrive in dynamic software development environments where I can contribute my creativity and problem-solving abilities to drive innovation. Let's connect and explore how we can make a lasting impact together!</p>
-            <div class="row mt-3">
-              <div class="col-sm-2">
-                <div class="pb-1">Names:</div>
-              </div>
-              <div class="col-sm-10">
-                <div class="pb-1 fw-bolder">Jabulane Skhumbuzo</div>
-              </div>
-              <div class="col-sm-2">
-                <div class="pb-1">Surname</div>
-              </div>
-              <div class="col-sm-10">
-                <div class="pb-1 fw-bolder">Hlatshwayo</div>
-              </div>
-              <div class="col-sm-2">
-                <div class="pb-1">Email:</div>
-              </div>
-              <div class="col-sm-10">
-                <div class="pb-1 fw-bolder">skhumbuzojabulane@gmail.com</div>
-              </div>
-              <div class="col-sm-2">
-                <div class="pb-1">Phone:</div>
-              </div>
-              <div class="col-sm-10">
-                <div class="pb-1 fw-bolder">+27 (0) 672 487 936</div>
-              </div>
-              <div class="col-sm-2">
-                <div class="pb-1">Address:</div>
-              </div>
-              <div class="col-sm-10">
-                <div class="pb-1 fw-bolder">Nelspruit, Mpumalanga, South Africa</div>
-              </div>
-              <div class="col-sm-2">
-                <div class="pb-1">Staus:</div>
-              </div>
-              <div class="col-sm-10">
-                <div class="pb-1 fw-bolder">Available</div>
+              I thrive in dynamic software development environments where I can contribute my creativity and problem-solving abilities to drive innovation. Let's connect and explore how we can make a lasting impact together!
+            </p>
+            <div class="user-details">
+              <div class="row mt-3">
+                <div class="user-details-container" style="font-family: monospace; display: flex; flex-direction: column;">
+                  <ol class="alternating-colors slide-from-bottom" style="padding-left: 50px;">
+                      <li style="padding-left: 16px; margin-top: 24px; position: relative; font-size: 16px; line-height: 20px;">
+                          <p><strong>Names:</strong> Jabulane Skhumbuzo</p>
+                      </li>
+                      <li style="padding-left: 16px; margin-top: 24px; position: relative; font-size: 16px; line-height: 20px;">
+                          <p><strong>Surname:</strong> Hlatshwayo</p>
+                      </li>
+                      <li style="padding-left: 16px; margin-top: 24px; position: relative; font-size: 16px; line-height: 20px;">
+                          <p><strong>Email:</strong> skhumbuzojabulane@gmail.com</p>
+                      </li>
+                      <li style="padding-left: 16px; margin-top: 24px; position: relative; font-size: 16px; line-height: 20px;">
+                          <p><strong>Phone:</strong> +27 (0) 672 487 936</p>
+                      </li>
+                      <li style="padding-left: 16px; margin-top: 24px; position: relative; font-size: 16px; line-height: 20px;">
+                          <p><strong>Address:</strong> Fourways Johannesburg, Gauteng, South Africa</p>
+                      </li>
+                  </ol>
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-md-5 offset-md-1"><img class="avatar img-fluid mt-2" src="images/Developers Computer Setup.jpg" width="400" height="400" alt="Desktop Setup"/></div>
+          <div class="col-md-5 offset-md-1"><img class="avatar img-fluid mt-2 img-fade-in" src="images/Developers Computer Setup.jpg" width="400" height="400" alt="Desktop Setup"/></div>
         </div>
       </div>
     </div>
@@ -114,7 +101,8 @@
   <div class="section px-3 px-lg-4 pt-5" id="services">
     <div class="container">
       <div class="text-center mb-5">
-        <h2 class="h4 my-2 decoration decoration-center">My Services</h2>
+        <h2 class="mb-4 display-6 text-center">My Services</h2>
+        <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
       </div>
       <div class="text-center">
         <p class="mx-auto mb-3" > 
@@ -145,7 +133,8 @@
     <div class="container px-3">
       <div class="row">
         <div style="text-align:center">
-          <h2 class="h4 my-2 decoration decoration-center">My Tech Stacks | My Skills</h2>
+          <h2 class="mb-4 display-6 text-center">My Tech Stacks | My Skills</h2>
+          <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
           <p style="padding-top: 40px;">I'm proficient in Java, C#, Python, C++ and JavaScript, as well as frameworks like Spring Boot, React.js, Angular.js, Django, .NET Core, .NET Framework, ASP.NET libraries like React-Native and database: Relational and NoSQL</p>
         </div>
         <section style="margin-top: 30px; margin-bottom: 50px" class="customer-logos slider">
@@ -166,7 +155,8 @@
   <div class="section px-3 px-lg-4 pt-5" id="experience">
     <div class="container-narrow">
       <div class="text-center mb-5">
-        <h2 class="decoration decoration-center">Experience</h2>
+        <h2 class="mb-4 display-6 text-center">Experience</h2>
+        <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
       </div>
       <div class="row">
         <div class="col-md-6">
@@ -236,6 +226,181 @@
       </div>
     </div>
   </div>
+  <div id="portfolio">
+    <section class="bg-light py-3 py-md-5">
+      <div class="container">
+        <div class="row justify-content-md-center">
+          <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
+            <h2 class="mb-4 display-6 text-center">My Portfolio</h2>
+            <p class="text-secondary mb-5 text-center lead fs-4">We are passionate about creating innovative products. We believe that technology can make people's lives better.</p>
+            <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
+          </div>
+        </div>
+      </div>
+
+      <div class="container overflow-hidden">
+        <div class="row gy-3 gy-md-2 bsb-project-1-grid">
+          <div class="col-12 col-md-6 col-lg-3 bsb-project-1-item">
+            <figure class="rounded rounded-4 overflow-hidden bsb-overlay-hover">
+              <a href="#!">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="https://images.pexels.com/photos/194096/pexels-photo-194096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Photography">
+              </a>
+              <figcaption>
+                <h3 class="text-white bsb-hover-fadeInLeft">Charming Concept</h3>
+                <div class="text-white bsb-hover-fadeInRight">Photography</div>
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-6 bsb-project-1-item">
+            <figure class="rounded rounded-4 overflow-hidden bsb-overlay-hover">
+              <a href="#!">
+                <img class="img-fluid bsb-scale bsb-hover-scale-up" src="https://images.pexels.com/photos/194096/pexels-photo-194096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Inspiration">
+              </a>
+              <figcaption>
+                <h3 class="text-white bsb-hover-fadeInUp">Linear Architecture</h3>
+                <div class="text-white bsb-hover-fadeInDown">Inspiration</div>
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 bsb-project-1-item">
+            <figure class="rounded rounded-4 overflow-hidden bsb-overlay-hover">
+              <a href="#!">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Nature">
+              </a>
+              <figcaption>
+                <h3 class="text-white bsb-hover-fadeInLeft">Endless Looks</h3>
+                <div class="text-white bsb-hover-fadeInRight">Nature</div>
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 bsb-project-1-item">
+            <figure class="rounded rounded-4 overflow-hidden bsb-overlay-hover">
+              <a href="#!">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="https://images.pexels.com/photos/194096/pexels-photo-194096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Design">
+              </a>
+              <figcaption>
+                <h3 class="text-white bsb-hover-fadeInLeft">Sleek Typography</h3>
+                <div class="text-white bsb-hover-fadeInRight">Design</div>
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 bsb-project-1-item">
+            <figure class="rounded rounded-4 overflow-hidden bsb-overlay-hover">
+              <a href="#!">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="https://images.pexels.com/photos/194096/pexels-photo-194096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Fashion">
+              </a>
+              <figcaption>
+                <h3 class="text-white bsb-hover-fadeInLeft">Ebony Vintage</h3>
+                <div class="text-white bsb-hover-fadeInRight">Fashion</div>
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 bsb-project-1-item">
+            <figure class="rounded rounded-4 overflow-hidden bsb-overlay-hover">
+              <a href="#!">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="https://images.pexels.com/photos/194096/pexels-photo-194096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Food">
+              </a>
+              <figcaption>
+                <h3 class="text-white bsb-hover-fadeInLeft">Orange Shine</h3>
+                <div class="text-white bsb-hover-fadeInRight">Food</div>
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 bsb-project-1-item">
+            <figure class="rounded rounded-4 overflow-hidden bsb-overlay-hover">
+              <a href="#!">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="https://images.pexels.com/photos/194096/pexels-photo-194096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Health">
+              </a>
+              <figcaption>
+                <h3 class="text-white bsb-hover-fadeInLeft">Boat Adventure</h3>
+                <div class="text-white bsb-hover-fadeInRight">Health</div>
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 bsb-project-1-item">
+            <figure class="rounded rounded-4 overflow-hidden bsb-overlay-hover">
+              <a href="#!">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="https://images.pexels.com/photos/194096/pexels-photo-194096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Nature">
+              </a>
+              <figcaption>
+                <h3 class="text-white bsb-hover-fadeInLeft">Offroad Moves</h3>
+                <div class="text-white bsb-hover-fadeInRight">Nature</div>
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="col-12 col-md-6 col-lg-3 bsb-project-1-item">
+            <figure class="rounded rounded-4 overflow-hidden bsb-overlay-hover">
+              <a href="#!">
+                <img class="img-fluid bsb-scale-up bsb-hover-scale" src="https://images.pexels.com/photos/194096/pexels-photo-194096.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Design">
+              </a>
+              <figcaption>
+                <h3 class="text-white bsb-hover-fadeInLeft">Cozy Occupancy</h3>
+                <div class="text-white bsb-hover-fadeInRight">Design</div>
+              </figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
+  </div>
+
+  <div class="mb-4 display-5 text-center" id="contact">
+    <section class="py-3 py-md-5">
+      <div class="container">
+        <div class="row justify-content-md-center">
+          <div class="col-12 col-md-10 col-lg-8 col-xl-7 col-xxl-6">
+            <h2 class="mb-4 display-6 text-center">Contact Form</h2>
+            <hr class="w-50 mx-auto mb-5 mb-xl-9 border-dark-subtle">
+          </div>
+        </div>
+      </div>
+    
+      <div class="container">
+        <div class="row justify-content-lg-center">
+          <div class="col-12 col-lg-9">
+            <div class="rounded contact-form">
+              <form action="#!">
+                <div class="row gy-4 gy-xl-5 p-4 p-xl-5">
+                  <div class="col-12">
+                   <input type="text" class="form-control" id="fullname" name="fullname" placeholder="Jabulane Hlatshwayo"required>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <div class="input-group">
+                      <span class="input-group-text">@</span>
+                      <input type="email" class="form-control" id="email" name="email" placeholder="example@example.com" required>
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-6">
+                    <div class="input-group">
+                      <span class="input-group-text">☎</span>
+                      <input type="tel" class="form-control" id="phone" name="phone" placeholder="0123456789">
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <textarea class="form-control" id="message" name="message" rows="3" required placeholder="type you message here"></textarea>
+                  </div>
+                  <div class="col-12">
+                    <div class="d-grid">
+                      <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+                    </div>
+                  </div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>    
+  </div>
+
   <footer class="pt-4 pb-4 text-center bg-light">
     <div class="container">
       <div class="my-3">
@@ -258,6 +423,11 @@
       </div>
   </footer>
   <div id="scrolltop"><a class="btn btn-secondary" href="#top"><span class="icon"><i class="fas fa-angle-up fa-x"></i></span></a></div>
+  <script src="https://unpkg.com/jquery@3.6.1/dist/jquery.min.js"></script>
+  <script src="https://unpkg.com/isotope-layout@3.0.6/dist/isotope.pkgd.min.js"></script>
+  <script src="https://unpkg.com/isotope-packery@2.0.1/packery-mode.pkgd.min.js"></script>
+  <script src="https://unpkg.com/imagesloaded@5.0.0/imagesloaded.pkgd.min.js"></script>
+  <script src="https://unpkg.com/bs-brain@2.0.3/components/projects/project-1/assets/controller/project-1.js"></script>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
